<resources>
    <string name="app_name">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_connect_using">Or connect using</string>
    <string name="title_text">Log in to your existent account of Q allure</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">Reset</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="member_code">Member Code</string>
    <string name="register">Register</string>
</resources>