<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    android:background="#FCF7F6"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/title1"
        android:text="@string/title_text"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>
    <EditText
        android:background="@drawable/background_edittext"
        android:hint="@string/email"
        android:id="@+id/email"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/title1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:drawableRight="@drawable/ic_email"/>
    <EditText
        android:background="@drawable/background_edittext"
        android:hint="@string/password"
        android:id="@+id/password"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:drawableRight="@drawable/ic_lock"/>
    <TextView
        android:id="@+id/forgot"
        android:textColor="@color/primary_color"
        android:text="@string/forgot_password"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:background="@drawable/background_btn"
        app:backgroundTint="@null"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="16dp"
        android:id="@+id/loginBtn"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/signup"
            android:text="@string/sign_up"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>