<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/back"
        android:background="@drawable/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FCF7F6"
            android:id="@+id/register"
            tools:context=".fragments.RegisterFragment">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Let's Get Started!"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create an account to Q Allure to get all feature"
                android:layout_marginTop="8dp"
                android:textColor="@color/text_color"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                android:background="@drawable/background_edittext"
                android:hint="@string/email"
                android:id="@+id/email"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/title1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:drawableRight="@drawable/ic_email"/>
            <EditText
                android:background="@drawable/background_edittext"
                android:hint="@string/password"
                android:id="@+id/password"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:drawableRight="@drawable/ic_lock"/>
            <EditText
                android:background="@drawable/background_edittext"
                android:hint="@string/confirm_password"
                android:id="@+id/cpassword"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:drawableRight="@drawable/ic_lock"/>
            <EditText
                android:background="@drawable/background_edittext"
                android:hint="@string/member_code"
                android:id="@+id/memberCode"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/cpassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:drawableRight="@drawable/ic_person"/>
            <Button
                android:background="@drawable/background_btn"
                app:backgroundTint="@null"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:padding="16dp"
                android:id="@+id/registerBtn"
                android:layout_marginTop="10dp"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memberCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>